--- a/#src/scss/styles.scss
+++ b/#src/scss/styles.scss
@@ -18,3 +18,8 @@
 @import "individ.scss";
 @import "payment.scss";
 @import "delegate.scss";
+@import "materials.scss";
+@import "choose.scss";
+@import "about.scss";
+@import "projects.scss";
+@import "gift.scss";
