--- a/#src/scss/styles.scss
+++ b/#src/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "_svg-initial.scss";
 @import "_overall.scss";
 @import "_type-styles.scss";
-// @import "_burger.scss";
+@import "_burger.scss";
 // @import "_breadcrumbs.scss";
 
 // modals
@@ -23,3 +23,4 @@
 @import "about.scss";
 @import "projects.scss";
 @import "gift.scss";
+@import "menu.scss";
