--- a/#src/scss/_modal.scss
+++ b/#src/scss/_modal.scss
@@ -1,46 +1,70 @@
 .modal-call {
 	display: none;
-	max-width: 530px;
-	width: 100%;
-	padding: 95px 0px 76px 0px;
-	@media (max-width: 420px) {
-		padding-top: 80px;
-		padding-bottom: 60px;
-	}
+	padding: 0;
+	// max-width: 530px;
+	// width: 100%;
+	// padding: 95px 0px 76px 0px;
+	// @media (max-width: 420px) {
+	// 	padding-top: 80px;
+	// 	padding-bottom: 60px;
+	// }
 	// .modal-call__close
 	&__close {
 	}
 	// .modal-call__container
 	&__container {
-		max-width: 410px;
-		margin: 0 auto;
-		padding: 0 20px;
+		display: flex;
+		// max-width: 410px;
+		// margin: 0 auto;
+		// padding: 0 20px;
+	}
+	&__img {
+		width: 190px;
+		background-image: url(../img/bg-benefits.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 50% 50%;
+	}
+	&__form {
+		padding: 35px 30px;
+		text-align: center;
+		max-width: 360px;
+		width: 100%;
 	}
 	// .modal-call__title
 	&__title {
-		font-family: "Bodoni";
-		margin-bottom: 65px;
-		font-weight: 700;
-		font-size: 33px;
-		text-align: center;
-		text-transform: uppercase;
-		color: #000;
-		@media (max-width: 768px) {
-			@include adaptiv(font-size, 33, 24, 768, 320);
-			@include adaptiv(margin-bottom, 65, 30, 768, 320);
-		}
+		font-size: 24px;
+		line-height: 26px;
+		margin-bottom: 12px;
+		letter-spacing: -0.03em;
+		font-weight: bold;
+		font-family: "Montserrat", sans-serif;
+		text-align: left;
+		color: #333;
+	}
+	&__subtitle {
+		line-height: 16px;
+		font-size: 14px;
+		letter-spacing: -0.03em;
+		color: #616161;
+		margin-bottom: 34px;
+		max-width: 100%;
+		text-align: left;
 	}
 	// .modal-call__privacy
 	&__privacy {
-		font-size: 13px;
-		line-height: 1.25;
-		color: #9a9a9a;
-		@media (max-width: 420px) {
-			font-size: 12px;
-		}
-		@media (max-width: 370px) {
-			font-size: 11px;
-		}
+		text-align: left;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		color: #9c9c9c;
+		font-size: 11px;
+		line-height: 11px;
+		letter-spacing: -0.1px;
+		padding-left: 27px;
+		background-image: url(../img/politica.png);
+		background-size: 20px 21px;
+		background-position: 0 50%;
+		background-repeat: no-repeat;
 		span {
 			position: relative;
 			text-decoration: underline;
@@ -63,27 +87,17 @@
 		flex-direction: column;
 	}
 	.wpcf7-form-control-wrap {
-		margin-bottom: 20px;
-		@media (max-width: 420px) {
-			margin-bottom: 15px;
-		}
+		margin-bottom: 8px;
 		input {
 			width: 100%;
-			height: 60px;
-			padding: 10px 20px;
-			font-size: 20px;
-			color: #000000;
-			background: #ffffff;
-			border: 1px solid #dbdbdb;
-			@media (max-width: 768px) {
-				font-size: 18px;
-			}
-			@media (max-width: 500px) {
-				height: 50px;
-				font-size: 16px;
-			}
-			@media (max-width: 420px) {
-				padding: 10px 15px;
+			height: 53px;
+			padding: 18px 20px;
+			font-size: 14px;
+			background-color: rgba(255, 255, 255, 0.4);
+			border: 1px solid #a7a6a6;
+			color: #333;
+			&:focus {
+				outline: 1px solid rgb(16, 16, 16);
 			}
 		}
 	}
@@ -93,24 +107,19 @@
 		justify-content: center;
 		align-items: center;
 		padding: 10px 15px;
-		min-height: 65px;
-		background: #03a34b;
-		border-radius: 50px;
-		font-size: 20px;
-		line-height: lh(29, 20);
+		min-height: 53px;
+		font-size: 14px;
+		font-weight: 700;
+		letter-spacing: -0.42px;
+		line-height: 13px;
 		text-align: center;
+		border: 1px solid #d74f4b;
 		color: #ffffff;
+		background-color: #a82420;
 		transition: background-color 0.3s;
-		@media (max-width: 500px) {
-			min-height: 55px;
-			font-size: 18px;
-		}
-		@media (max-width: 420px) {
-			min-height: 50px;
-			font-size: 16px;
-		}
+		text-transform: uppercase;
 		&:hover {
-			background: #01873d;
+			background-color: #d74f4b;
 		}
 	}
 
@@ -120,15 +129,16 @@
 
 .close-modal {
 	position: absolute;
-	width: 23px;
-	height: 23px;
-	top: 14px;
-	right: 14px;
+	width: 45px;
+	height: 45px;
+	padding: 10px;
+	top: 0px;
+	right: 0px;
 	background: transparent;
 	cursor: pointer;
 	&:hover {
 		svg path {
-			fill: #03a34b;
+			fill: #d74f4b;
 		}
 	}
 
