--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -19,6 +19,10 @@
 		img {
 			max-width: 113px;
 			max-height: 62px;
+			@media (max-width: 425px) {
+				max-width: 96px;
+				max-height: 53px;
+			}
 		}
 	}
 	// .header__text
@@ -28,15 +32,34 @@
 		line-height: lh(19, 16);
 		color: #fff;
 		text-transform: uppercase;
+		@media (max-width: 670px) {
+			font-size: 14px;
+			max-width: 105px;
+		}
+		@media (max-width: 608px) {
+			margin-right: 0;
+		}
+		@media (max-width: 425px) {
+			display: none;
+		}
 	}
 	// .header__tels
 	&__tels {
 		margin-right: 35px;
+		@media (max-width: 840px) {
+			margin-right: 0;
+		}
+		@media (max-width: 608px) {
+			display: none;
+		}
 		li {
 			a {
 				font-weight: 700;
 				line-height: lh(19, 16);
 				color: #fff;
+				@media (max-width: 670px) {
+					font-size: 14px;
+				}
 			}
 		}
 	}
@@ -47,6 +70,10 @@
 		line-height: lh(16, 14);
 		text-transform: uppercase;
 		color: #a82420;
+		cursor: pointer;
+		@media (max-width: 1150px) {
+			display: none;
+		}
 	}
 	// .header__mail
 	&__mail {
@@ -55,138 +82,38 @@
 		color: #fff;
 		font-weight: 700;
 		text-transform: uppercase;
+		@media (max-width: 960px) {
+			margin-right: 0;
+		}
+		@media (max-width: 840px) {
+			display: none;
+		}
 	}
 	// .header__socials
 	&__socials {
-		margin-right: 35px;
 		display: flex;
 		align-items: center;
-		a:not(:last-child) {
-			margin-right: 17px;
+		flex-wrap: wrap;
+		max-width: 128px;
+		margin-left: -8px;
+		margin-right: -8px;
+		a {
+			margin: 4px 8px 4px 8px;
+			img {
+				max-width: 19px;
+				max-height: 22px;
+				filter: brightness(0) invert(1);
+				transition: 0.3s;
+				&:hover {
+					filter: none;
+				}
+			}
+		}
+		@media (max-width: 960px) {
+			display: none;
 		}
 	}
-}
-
-.header_menu {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	position: relative;
-	cursor: pointer;
-}
-.btn-menu {
-	width: 20px;
-	height: 13px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	position: relative;
-}
-.btn-menu span {
-	display: block;
-	width: 20px;
-	max-width: 100%;
-	height: 3px;
-	background-color: #a82420;
-	transition: 0.5s;
-	-webkit-transition: 0.5s;
-	-moz-transition: 0.5s;
-	-ms-transition: 0.5s;
-	-o-transition: 0.5s;
-}
-.header_menu-triger {
-	font-size: 14px;
-	line-height: 16px;
-	margin-left: 10px;
-	text-transform: uppercase;
-}
-.menu-box {
-	opacity: 0;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-align: start;
-	-ms-flex-align: start;
-	align-items: flex-start;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	position: absolute;
-	top: 35px;
-	left: 0;
-	background-color: rgba(30, 40, 45, 0.7);
-	padding: 10px;
-	width: 260px;
-	transition: 0.5s;
-	-webkit-transition: 0.5s;
-	-moz-transition: 0.5s;
-	-ms-transition: 0.5s;
-	-o-transition: 0.5s;
-}
-.menu-box:before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: -17px;
-	left: 38px;
-	border-left: 13px solid transparent;
-	border-right: 13px solid transparent;
-	border-bottom: 17px solid rgba(30, 40, 45, 0.7);
-}
-.menu-elements {
-	font-family: "Roboto Condensed", sans-serif;
-	font-size: 18px;
-	line-height: 24px;
-	display: block;
-	width: 100%;
-	padding: 5px;
-}
-.menu-elements:hover {
-	background-color: rgba(168, 36, 32, 0.8);
-}
-.active {
-	opacity: 1;
-}
-.menu-box:not(.active) {
-	pointer-events: none;
-}
-.hidden {
-	opacity: 0;
-	transition: 0.4s;
-	-webkit-transition: 0.4s;
-	-moz-transition: 0.4s;
-	-ms-transition: 0.4s;
-	-o-transition: 0.4s;
-}
-.rotate {
-	position: absolute;
-	top: 5px !important;
-	transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
-}
-.rotate2 {
-	position: absolute;
-	top: 5px !important;
-	transform: rotate(-45deg);
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
+	&__menu {
+		margin-left: 35px;
+	}
 }
