--- a/#src/scss/choose.scss
+++ b/#src/scss/choose.scss
@@ -2,15 +2,28 @@
 	padding-top: 100px;
 	padding-bottom: 167px;
 	background: #f8f8f8;
+	@media (max-width: 993px) {
+		@include adaptiv(padding-bottom, 167, 50, 993, 320);
+		@include adaptiv(padding-top, 100, 50, 993, 320);
+	}
 	// .choose__container
 	&__container {
 	}
 	// .choose__top
 	&__top {
 		margin-bottom: 64px;
+		@media (max-width: 576px) {
+			margin-bottom: 44px;
+		}
+		@media (max-width: 420px) {
+			margin-bottom: 35px;
+		}
 	}
 	&__main {
 		margin-bottom: 93px;
+		@media (max-width: 993px) {
+			@include adaptiv(margin-bottom, 93, 40, 993, 320);
+		}
 	}
 	// .choose__title
 	&__title {
@@ -20,6 +33,9 @@
 		line-height: lh(21, 18);
 		text-transform: uppercase;
 		color: #000000;
+		@media (max-width: 993px) {
+			@include adaptiv(font-size, 18, 15, 993, 320);
+		}
 	}
 	// .choose__slider-wrapper
 	&__slider-wrapper {
@@ -29,19 +45,19 @@
 	}
 	// .choose__slider
 	&__slider {
-		.swiper-slide {
-			position: relative;
-			padding-bottom: 16.4%;
-			img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				object-position: center;
-				font-family: "object-fit: cover; object-position: center;";
-			}
+	}
+	&__img {
+		position: relative;
+		padding-bottom: 69.7%;
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+			font-family: "object-fit: cover; object-position: center;";
 		}
 	}
 	// .choose__bot
@@ -57,7 +73,7 @@
 	// .choose__logos
 	&__logos {
 		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(120px, 181px));
+		grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 		grid-column-gap: 20px;
 		grid-row-gap: 20px;
 		li {
