--- a/#src/scss/delegate.scss
+++ b/#src/scss/delegate.scss
@@ -4,12 +4,19 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+	@media (max-width: 993px) {
+		@include adaptiv(padding-bottom, 180, 50, 993, 320);
+		@include adaptiv(padding-top, 102, 50, 993, 320);
+	}
 	// .delegate__container
 	&__container {
 	}
 	// .delegate__top
 	&__top {
 		margin-bottom: 127px;
+		@media (max-width: 993px) {
+			@include adaptiv(margin-bottom, 120, 35, 993, 320);
+		}
 		.title-block__bg {
 			color: rgba(248, 248, 248, 0.1);
 		}
@@ -17,9 +24,13 @@
 	// .delegate__grid
 	&__grid {
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
+		// grid-template-columns: repeat(4, 1fr);
+		grid-template-columns: repeat(auto-fill, minmax(242px, 1fr));
 		grid-column-gap: 73px;
 		grid-row-gap: 55px;
+		@media (max-width: 420px) {
+			grid-row-gap: 40px;
+		}
 	}
 	// .delegate__column
 	&__column {
@@ -31,10 +42,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	max-width: 242px;
+	margin: 0 auto;
 	// .item-delegate__icon
 	&__icon {
 		margin-bottom: 38px;
 		height: 48px;
+		@media (max-width: 993px) {
+			margin-bottom: 25px;
+		}
 		img {
 			max-width: 48px;
 			max-height: 100%;
@@ -48,5 +64,11 @@
 		text-align: center;
 		text-transform: uppercase;
 		color: #ffffff;
+		@media (max-width: 576px) {
+			font-size: 16px;
+		}
+		@media (max-width: 374px) {
+			font-size: 15px;
+		}
 	}
 }
