--- a/#src/scss/gift.scss
+++ b/#src/scss/gift.scss
@@ -4,12 +4,19 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	@media (max-width: 993px) {
+		@include adaptiv(padding-bottom, 135, 50, 993, 320);
+		@include adaptiv(padding-top, 127, 50, 993, 320);
+	}
 	// .gift__container
 	&__container {
 	}
 	// .gift__top
 	&__top {
 		margin-bottom: 110px;
+		@media (max-width: 993px) {
+			@include adaptiv(margin-bottom, 110, 35, 993, 320);
+		}
 	}
 	.title-block__subtitle {
 		font-family: "Montserrat";
@@ -18,26 +25,46 @@
 		line-height: lh(37, 30);
 		text-align: center;
 		color: #a82420;
+		@media (max-width: 993px) {
+			@include adaptiv(font-size, 30, 22, 993, 320);
+		}
 	}
 	// .gift__grid
 	&__grid {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		// grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
 		grid-column-gap: 100px;
 		grid-row-gap: 50px;
+		@media (max-width: 500px) {
+			grid-row-gap: 35px;
+		}
 	}
 	// .gift__item
 	&__item {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		max-width: 330px;
+		margin: 0 auto;
 	}
 	// .gift__icon
 	&__icon {
 		margin-bottom: 30px;
+		@media (max-width: 500px) {
+			margin-bottom: 20px;
+		}
 		img {
 			max-width: 98px;
 			max-height: 98px;
+			@media (max-width: 500px) {
+				max-width: 70px;
+				max-height: 70px;
+			}
+			@media (max-width: 420px) {
+				max-width: 55px;
+				max-height: 55px;
+			}
 		}
 	}
 	// .gift__title
@@ -48,5 +75,11 @@
 		text-align: center;
 		text-transform: uppercase;
 		color: #ffffff;
+		@media (max-width: 500px) {
+			font-size: 17px;
+		}
+		@media (max-width: 420px) {
+			font-size: 15px;
+		}
 	}
 }
