--- a/#src/scss/individ.scss
+++ b/#src/scss/individ.scss
@@ -1,6 +1,9 @@
 .individ {
 	padding-top: 54px;
 	padding-bottom: 104px;
+	@media (max-width: 1250px) {
+		@include adaptiv(padding-bottom, 104, 50, 1250, 320);
+	}
 	// .individ__container
 	&__container {
 	}
@@ -14,6 +17,16 @@
 		grid-template-columns: repeat(3, 1fr);
 		grid-column-gap: 173px;
 		grid-row-gap: 60px;
+		@media (max-width: 1250px) {
+			@include adaptiv(grid-column-gap, 173, 50, 1250, 820);
+		}
+		@media (max-width: 820px) {
+			grid-column-gap: 10px;
+			grid-template-columns: repeat(1, 1fr);
+		}
+		@media (max-width: 500px) {
+			grid-row-gap: 40px;
+		}
 	}
 	// .individ__column
 	&__column {
@@ -25,12 +38,31 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	@media (max-width: 820px) {
+		max-width: 320px;
+		margin: 0 auto;
+	}
+
 	// .item-individ__icon
 	&__icon {
 		margin-bottom: 25px;
+		@media (max-width: 500px) {
+			margin-bottom: 15px;
+		}
+		@media (max-width: 420px) {
+			margin-bottom: 10px;
+		}
 		img {
 			max-width: 100px;
 			max-height: 100px;
+			@media (max-width: 500px) {
+				max-width: 70px;
+				max-height: 70px;
+			}
+			@media (max-width: 420px) {
+				max-width: 55px;
+				max-height: 55px;
+			}
 		}
 	}
 	// .item-individ__title
@@ -43,6 +75,9 @@
 		text-align: center;
 		text-transform: uppercase;
 		color: #333333;
+		@media (max-width: 420px) {
+			margin-bottom: 10px;
+		}
 	}
 	// .item-individ__subtitle
 	&__subtitle {
