--- a/#src/scss/materials.scss
+++ b/#src/scss/materials.scss
@@ -2,12 +2,19 @@
 	background: #f8f8f8;
 	padding-top: 100px;
 	padding-bottom: 100px;
+	@media (max-width: 993px) {
+		@include adaptiv(padding-bottom, 100, 50, 993, 320);
+		@include adaptiv(padding-top, 100, 50, 993, 320);
+	}
 	// .materials__container
 	&__container {
 	}
 	// .materials__top
 	&__top {
 		margin-bottom: 76px;
+		@media (max-width: 993px) {
+			@include adaptiv(margin-bottom, 76, 35, 993, 320);
+		}
 	}
 	// .materials__tabs
 	&__tabs {
@@ -18,9 +25,17 @@
 	// .tabs-materials__buttons
 	&__buttons {
 		display: flex;
+		flex-wrap: wrap;
 		align-items: center;
 		margin: 0px -10px 43px -10px;
+		@media (max-width: 768px) {
+			margin: 0px -7px 35px -7px;
+		}
+		@media (max-width: 576px) {
+			margin: 0px -5px 30px -5px;
+		}
 		li {
+			flex-grow: 1;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -34,6 +49,24 @@
 			color: #000000;
 			cursor: pointer;
 			transition: 0.3s;
+
+			@media (max-width: 993px) {
+				font-size: 15px;
+			}
+			@media (max-width: 768px) {
+				font-size: 14px;
+				padding: 6px 12px;
+				margin: 0px 7px 10px 7px;
+			}
+			@media (max-width: 576px) {
+				padding: 6px 12px;
+				margin: 0px 5px 10px 5px;
+				font-size: 13px;
+			}
+			@media (max-width: 420px) {
+				padding: 5px 10px;
+				font-size: 12px;
+			}
 
 			&.active {
 				background: #a82420;
@@ -66,6 +99,12 @@
 	&__slider {
 		overflow: hidden;
 		margin-bottom: 60px;
+		@media (max-width: 768px) {
+			margin-bottom: 50px;
+		}
+		@media (max-width: 650px) {
+			margin-bottom: 40px;
+		}
 	}
 }
 .swiper-wrapper {
@@ -77,11 +116,30 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	@media (max-width: 1200px) and (min-width: 901px) {
+		@include adaptiv(padding, 25, 15, 1200, 900);
+	}
+	@media (max-width: 760px) and (min-width: 631px) {
+		padding: 15px;
+	}
+	@media (max-width: 530px) and (min-width: 375px) {
+		padding: 15px;
+	}
+
 	// .material__img
 	&__img {
 		margin-bottom: 25px;
 		position: relative;
 		padding-bottom: 80%;
+		@media (max-width: 1200px) and (min-width: 901px) {
+			@include adaptiv(margin-bottom, 25, 15, 1200, 900);
+		}
+		@media (max-width: 760px) and (min-width: 631px) {
+			margin-bottom: 15px;
+		}
+		@media (max-width: 530px) and (min-width: 375px) {
+			margin-bottom: 15px;
+		}
 		img {
 			position: absolute;
 			top: 0;
@@ -107,13 +165,40 @@
 		text-transform: uppercase;
 		font-weight: 700;
 		flex: 1 1 auto;
+		@media (max-width: 1000px) and (min-width: 901px) {
+			font-size: 15px;
+		}
+		@media (max-width: 760px) and (min-width: 631px) {
+			font-size: 15px;
+		}
+		@media (max-width: 530px) and (min-width: 375px) {
+			font-size: 14px;
+		}
 	}
 	// .material__subtitle
 	&__subtitle {
 		margin-bottom: 10px;
+		@media (max-width: 1000px) and (min-width: 901px) {
+			font-size: 15px;
+		}
+		@media (max-width: 760px) and (min-width: 631px) {
+			font-size: 15px;
+		}
+		@media (max-width: 530px) and (min-width: 375px) {
+			font-size: 14px;
+		}
 	}
 	// .material__city
 	&__city {
+		@media (max-width: 1000px) and (min-width: 901px) {
+			font-size: 14px;
+		}
+		@media (max-width: 760px) and (min-width: 631px) {
+			font-size: 14px;
+		}
+		@media (max-width: 530px) and (min-width: 375px) {
+			font-size: 13px;
+		}
 	}
 	// .material__price
 	&__price {
@@ -121,14 +206,34 @@
 		padding-top: 18px;
 		border-top: 1px solid #e5e5e5;
 		font-weight: 700;
+		@media (max-width: 1000px) and (min-width: 901px) {
+			font-size: 15px;
+		}
+		@media (max-width: 760px) and (min-width: 631px) {
+			font-size: 15px;
+		}
+		@media (max-width: 530px) and (min-width: 375px) {
+			font-size: 13px;
+			margin-top: 15px;
+			padding-top: 12px;
+		}
 	}
 }
 .control-tabs {
 	display: flex;
+	@media (max-width: 500px) {
+		flex-direction: column;
+	}
 	// .control-tabs__buttons
 	&__buttons {
 		display: flex;
 		margin-right: 32px;
+		@media (max-width: 500px) {
+			order: 1;
+			margin-right: 0;
+			margin-top: 30px;
+			justify-content: center;
+		}
 	}
 	// .control-tabs__btn
 	&__btn {
@@ -141,6 +246,9 @@
 		flex-wrap: wrap;
 		align-items: center;
 		margin: 0 -7px;
+		@media (max-width: 500px) {
+			justify-content: center;
+		}
 
 		.swiper-pagination-bullet {
 			margin: 3px 7px 3px 7px;
