--- a/#src/scss/materials.scss
+++ b/#src/scss/materials.scss
@@ -94,17 +94,19 @@
 		.swiper-slide {
 			height: auto;
 		}
+		.control-tabs {
+			margin-top: 60px;
+			@media (max-width: 768px) {
+				margin-top: 50px;
+			}
+			@media (max-width: 650px) {
+				margin-top: 40px;
+			}
+		}
 	}
 	// .tabs-materials__slider
 	&__slider {
 		overflow: hidden;
-		margin-bottom: 60px;
-		@media (max-width: 768px) {
-			margin-bottom: 50px;
-		}
-		@media (max-width: 650px) {
-			margin-bottom: 40px;
-		}
 	}
 }
 .swiper-wrapper {
@@ -146,9 +148,9 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			object-fit: cover;
+			object-fit: contain;
 			object-position: center;
-			font-family: "object-fit: cover; object-position: center;";
+			font-family: "object-fit: contain; object-position: center;";
 		}
 	}
 	&__title,
