--- a/#src/scss/_overall.scss
+++ b/#src/scss/_overall.scss
@@ -241,22 +241,22 @@ input[type="submit"] {
 @keyframes mouse-wheel {
 	0% {
 		opacity: 1;
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
+		-webkit-transform: translate(-1px, 0);
+		transform: translate(-1px, 0);
 	}
 
 	50% {
 		opacity: 0;
-		-webkit-transform: translateY(20px);
-		transform: translateY(20px);
-		-moz-transform: translateY(20px);
-		-o-transform: translateY(20px);
+		-webkit-transform: translate(-1px, 20px);
+		transform: translate(-1px, 20px);
+		-moz-transform: translate(-1px, 20px);
+		-o-transform: translate(-1px, 20px);
 	}
 	100% {
 		opacity: 0;
-		-webkit-transform: translateY(30px);
-		transform: translateY(30px);
-		-moz-transform: translateY(30px);
-		-o-transform: translateY(30px);
+		-webkit-transform: translate(-1px, 30px);
+		transform: translate(-1px, 30px);
+		-moz-transform: translate(-1px, 30px);
+		-o-transform: translate(-1px, 30px);
 	}
 }
